# memex

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
docs/: README.md  README.zh.md  api.md  api.zh.md  architecture.md  architecture.zh.md  cli.md  cli.zh.md  config.md  config.zh.md  cursor.md  cursor.zh.md  docker.md  docker.zh.md  overview.md  overview.zh.md  quickstart.md  quickstart.zh.md
memex/: __init__.py  cli.py
memex/backends/: chroma_store.py  embeddings.py  mem_store.py
memex/commands/: client_cmd.py  ctx_cmd.py  cursor_cmd.py  doc_cmd.py  init_cmd.py  mem_cmd.py  serve_cmd.py  status_cmd.py
memex/core/: config.py  document.py  utils.py  wiki.py
memex/integrations/: watcher.py
memex/server/: __init__.py  api.py  factory.py  schemas.py
scripts/: docker-build-test.sh  install.sh
templates/: hooks.json  memex-client.py  memex.local.yaml  memex.mdc
templates/agents/: memex-archive.md  memex-ask.md  memex-curator.md
tests/: conftest.py  manual_e2e.sh  test_agents.py  test_client_cmd.py  test_ctx.py  test_cursor_cmd.py  test_document.py  test_init_profile.py  test_mem_rm_integration.py  test_mem_store.py  test_memex_client_script.py  test_server_api.py  test_status_backup.py  test_utils.py  test_watcher.py  test_wiki.py
